# tree-sitter-structured-agent

./: .gitignore  Cargo.toml  binding.gyp  build.rs  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  indents.scm  outline.scm
src/: grammar.json  lib.rs  node-types.json  parser.c
test/corpus/: advanced.txt  basic.txt
