[package]
name = "tree-sitter-structured-agent"
version = "0.1.0"
edition = "2021"
authors = ["Structured Agent Contributors"]
description = "Tree-sitter grammar for Structured Agent language"
license = "MIT"
repository = "https://github.com/your-repo/tree-sitter-structured-agent"

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
